# v

./: AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
examples/: sample.md  sample.php  sample.rs  sample.txt
src/: cli.rs  config.rs  highlight.rs  main.rs  pager.rs  viewer.rs  wrap.rs
