[package]
name = "v"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
description = "A CLI tool to view text files with syntax highlighting and word wrapping"
license = "MIT"

[[bin]]
name = "v"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
syntect = "5.3.0"
terminal_size = "0.4.4"
toml = "0.9.12"
unicode-width = "0.2.0"
